// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage should open modal 1`] = `
<div
  className="wrapper"
>
  <div
    className="movie-list"
  >
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/7WsyChQLEftFiDOVTGkv3hFpyyt.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          8.3
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            Avengers: Infinity War
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/to0spRl1CMDvyUbOnbb4fTk3VAd.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          7.6
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            Deadpool 2
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/adOzdWS35KAo21r9R4BuFCkLer6.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          7.6
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            Upgrade
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/hKHZhUbIyUAjcSrqJThFGYIR6kI.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          8.4
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            To All the Boys I've Loved Before
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/eXXpuW2xaq5Aen9N5prFlARVIvr.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          7
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            Tag
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/c3cUb0b3qHlWaawbLRC9DSsJwEr.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          7.8
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            Disenchantment
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
  </div>
  <div
    className="btn-wrapper"
  >
    <button
      className="btn btn-round"
      type="button"
    >
      Load
    </button>
  </div>
  <button
    className="btn btn-floating"
    type="button"
  >
    <IconMock />
  </button>
  <div
    className="modal"
  >
    <div
      className="container"
    >
      <div
        className="container-header"
      >
        <p>
          Movie Roulette
        </p>
        <button
          className="btn btn-close"
          type="button"
        >
          <IconMock />
        </button>
      </div>
      <div
        className="container-content"
      >
        <div
          className="mdl-container"
        >
          <div
            className="radio"
          >
            <p
              className="radio-title"
            >
              Select genre:
            </p>
            <label
              className="radio-option"
            >
              Action
              <input
                className="radio-option-btn"
                name="Genre"
                onChange={[Function]}
                type="radio"
                value="Action"
              />
            </label>
            <label
              className="radio-option"
            >
              Comedy
              <input
                className="radio-option-btn"
                name="Genre"
                onChange={[Function]}
                type="radio"
                value="Comedy"
              />
            </label>
            <label
              className="radio-option"
            >
              Drama
              <input
                className="radio-option-btn"
                name="Genre"
                onChange={[Function]}
                type="radio"
                value="Drama"
              />
            </label>
            <label
              className="radio-option"
            >
              SF
              <input
                className="radio-option-btn"
                name="Genre"
                onChange={[Function]}
                type="radio"
                value="SF"
              />
            </label>
          </div>
          <button
            className="btn btn-primary"
            type="button"
          >
            Roll
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HomePage should render HomePage 1`] = `
<div
  className="wrapper"
>
  <div
    className="movie-list"
  >
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/7WsyChQLEftFiDOVTGkv3hFpyyt.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          8.3
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            Avengers: Infinity War
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/to0spRl1CMDvyUbOnbb4fTk3VAd.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          7.6
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            Deadpool 2
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/adOzdWS35KAo21r9R4BuFCkLer6.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          7.6
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            Upgrade
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/hKHZhUbIyUAjcSrqJThFGYIR6kI.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          8.4
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            To All the Boys I've Loved Before
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/eXXpuW2xaq5Aen9N5prFlARVIvr.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          7
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            Tag
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
    <div
      className="card"
      onClick={[Function]}
    >
      <div
        className="card-header"
      >
        <div
          className="card-header-image"
          style={
            Object {
              "backgroundImage": "url(\\"fake-base/w342/c3cUb0b3qHlWaawbLRC9DSsJwEr.jpg\\")",
            }
          }
        />
        <p
          className="card-header-grade"
        >
          7.8
        </p>
      </div>
      <div
        className="card-data"
      >
        <div
          className="card-data-title"
        >
          <p>
            Disenchantment
          </p>
          <p>
            (
            2018
            )
          </p>
        </div>
        <p>
           
          Language: en
        </p>
      </div>
    </div>
  </div>
  <div
    className="btn-wrapper"
  >
    <button
      className="btn btn-round"
      type="button"
    >
      Load
    </button>
  </div>
  <button
    className="btn btn-floating"
    type="button"
  >
    <IconMock />
  </button>
</div>
`;
